# egui_node_graph_2

./: Cargo.toml  README.md
egui_node_graph_2/: Cargo.toml
egui_node_graph_2/src/: editor_ui.rs  graph.rs  graph_impls.rs  node_finder.rs  traits.rs
egui_node_graph_example/: Cargo.toml
egui_node_graph_example/src/: app.rs
