[package]
name = "egui_node_graph_2"
description = "A helper library to create interactive node graphs using egui"
homepage = "https://github.com/Lubba-64/egui_node_graph_2"
repository = "https://github.com/Lubba-64/egui_node_graph_2"
license = "MIT"
version = "0.4.1"
keywords = ["ui", "egui", "graph", "node"]
authors = ["setzer22", "lubba64"]
edition = "2021"
readme = "../README.md"
workspace = ".."

[features]
persistence = ["serde", "slotmap/serde", "smallvec/serde", "egui/persistence"]

[dependencies]
egui = { version = "0.27.2" }
slotmap = { version = "1.0" }
smallvec = { version = "1.10.0" }
serde = { version = "1.0", optional = true, features = ["derive"] }
thiserror = "1.0"
